deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redes
  namespace: network
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redes
  template:
    metadata:
      labels:
        app: redes
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      nodeSelector:
        nodepool: dev
      containers:
        - name: web
          image: redes-web:latest
          imagePullPolicy: Never
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
