service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redes-svc
  namespace: network
spec:
  selector:
    app: redes
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
