ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redes-ing
  namespace: network
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
    traefik.ingress.kubernetes.io/router.middlewares: network-redes-chain@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: network.pablocabrera.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redes-svc
                port:
                  number: 80
  tls:
    - hosts:
        - network.pablocabrera.dev
